<resources>
    <string name="app_name">Submission 2 BFAA</string>
    <string name="DummyName">dummyName</string>
    <string name="DummyDesc">Dummy desc</string>
    <string name="search">search</string>
    <string name="search_hint">masukan username</string>
    <string name="tab_text_1">Following</string>
    <string name="tab_text_2">Follower</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_tab_following">Following Someone</string>
    <string name="content_tab_follower">Follower Someone</string>
    <string name="nama">Nama :</string>
    <string name="asal">Asal :</string>
    <string name="perusahaan">Perusahaan :</string>
    <string name="repo">Repository :</string>

    <string name="zfolllowing">tidak diikuti siapapun</string>
    <string name="zfolllower">tidak mengikuti siapapun</string>


    <string name="change_language_settings">Change Language Settings</string>
    <string name="splash_text" translatable="false">Submission 2 BFAA by Reza</string>
    <string name="favourite">Favourite List</string>
    <string name="removefav">Remove From Favourite</string>

    <string name="add_to_favourite">Add to Favourite</string>
    <string name="favempty">Favourite list Is Empty</string>
    <string name="switch_key">switch_key</string>
    <string name="daily_reminder">Daily Reminder at 9 am</string>
    <string name="languague_key">language_key</string>
    <string name="settings">Settings</string>
    <string name="judul">Submisson 3 By Reza</string>

</resources>